--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,8 +2,8 @@ name: Release
 
 on:
   push:
-    tags:
-      - "v[0-9]+.*"
+    branches:
+      - linux-support
 
 jobs:
   prepare:
@@ -32,25 +32,29 @@ jobs:
           --generate-notes \
           --notes-file NOTE.md \
 
-  build-windows:
+  build-linux:
     needs: prepare
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         target:
-          - x86_64-pc-windows-msvc
+          - aarch-linux-android
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: Setup toolchain
-        uses: dtolnay/rust-toolchain@stable
+        uses: dtolnay/rust-toolchain@nightly
         with:
           target: ${{ matrix.target }}
 
+      - name: add target
+        run: |
+          rustup target add aarch64-linux-android
+
       - name: Build
-        run: cargo build --target ${{ matrix.target }} --package lovely-win --release
+        run: cargo build --target ${{ matrix.target }} --package lovely-unix --release
 
       - name: Compress
         run: |
@@ -64,45 +68,34 @@ jobs:
         run: >-
           gh release upload ${{ github.ref_name }} lovely-${{ matrix.target }}.zip
 
-  build-mac:
-    needs: prepare
-    strategy:
-      matrix:
-        target:
-          - x86_64-apple-darwin
-          - aarch64-apple-darwin
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup toolchain
-        uses: dtolnay/rust-toolchain@nightly
-        with:
-          target: ${{ matrix.target }}
-
-      - name: Install Mac SDK
-        run: |
-          curl -L "https://github.com/phracker/MacOSX-SDKs/releases/download/11.3/MacOSX10.9.sdk.tar.xz" | tar -J -x -C /opt
-          curl -L "https://github.com/phracker/MacOSX-SDKs/releases/download/11.3/MacOSX11.3.sdk.tar.xz" | tar -J -x -C /opt
-          echo "SDKROOT=/opt/MacOSX11.3.sdk" >> $GITHUB_ENV
-
-      - name: Install cargo-zigbuild
-        run: |
-          pip3 install cargo-zigbuild
-
-      - name: Build
-        run: cargo zigbuild --target ${{ matrix.target }} --package lovely-mac --release
-
-      - name: Compress tar.gz
-        run: |
-          cp ./crates/lovely-mac/run_lovely.sh ./target/${{ matrix.target }}/release/
-          cd ./target/${{ matrix.target }}/release/
-          tar czfv lovely-${{ matrix.target }}.tar.gz liblovely.dylib run_lovely.sh
-          mv "lovely-${{ matrix.target }}.tar.gz" ${{ github.workspace }}
-
-      - name: Submit build artifact
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: >-
-          gh release upload ${{ github.ref_name }} lovely-${{ matrix.target }}.tar.gz
+          build-windows:
+            needs: prepare
+            runs-on: windows-latest
+            strategy:
+              matrix:
+                target:
+                  - x86_64-pc-windows-msvc
+        
+            steps:
+              - name: Checkout
+                uses: actions/checkout@v4
+        
+              - name: Setup toolchain
+                uses: dtolnay/rust-toolchain@stable
+                with:
+                  target: ${{ matrix.target }}
+        
+              - name: Build
+                run: cargo build --target ${{ matrix.target }} --package lovely-win --release
+        
+              - name: Compress
+                run: |
+                  cd ./target/${{ matrix.target }}/
+                  7z a "lovely-${{ matrix.target }}.zip" release
+                  mv "lovely-${{ matrix.target }}.zip" ${{ github.workspace }}
+        
+              - name: Submit build artifact
+                env:
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+                run: >-
+                  gh release upload ${{ github.ref_name }} lovely-${{ matrix.target }}.zip
