--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   prepare:
-    name: Create  draft release
+    name: Create draft release
     runs-on: ubuntu-latest
 
     steps:
@@ -45,9 +45,13 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup toolchain
-        uses: dtolnay/rust-toolchain@stable
+        uses: dtolnay/rust-toolchain@nightly
         with:
           target: ${{ matrix.target }}
+
+      - name: add target
+        run: |
+          rustup target add aarch64-linux-android
 
       - name: Build
         run: cargo build --target ${{ matrix.target }} --package lovely-unix --release
