--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,7 @@ jobs:
     strategy:
       matrix:
         target:
-          - aarch64-linux-android
+          - x86_64-unknown-linux-gnu
 
     steps:
       - name: Checkout
@@ -51,8 +51,7 @@ jobs:
 
       - name: add target
         run: |
-          rustup target add aarch64-linux-android
-
+          rustup target add x86_64-unknown-linux-gnu
       - name: Build
         run: cargo build --target ${{ matrix.target }} --package lovely-unix --release
 
@@ -68,34 +67,34 @@ jobs:
         run: >-
           gh release upload ${{ github.ref_name }} lovely-${{ matrix.target }}.zip
 
-          build-windows:
-            needs: prepare
-            runs-on: windows-latest
-            strategy:
-              matrix:
-                target:
-                  - x86_64-pc-windows-msvc
+  build-windows:
+    needs: prepare
+    runs-on: windows-latest
+    strategy:
+      matrix:
+        target:
+          - x86_64-pc-windows-msvc
         
-            steps:
-              - name: Checkout
-                uses: actions/checkout@v4
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
         
-              - name: Setup toolchain
-                uses: dtolnay/rust-toolchain@stable
-                with:
-                  target: ${{ matrix.target }}
+      - name: Setup toolchain
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          target: ${{ matrix.target }}
         
-              - name: Build
-                run: cargo build --target ${{ matrix.target }} --package lovely-win --release
+      - name: Build
+        run: cargo build --target ${{ matrix.target }} --package lovely-win --release
         
-              - name: Compress
-                run: |
-                  cd ./target/${{ matrix.target }}/
-                  7z a "lovely-${{ matrix.target }}.zip" release
-                  mv "lovely-${{ matrix.target }}.zip" ${{ github.workspace }}
+      - name: Compress
+        run: |
+            cd ./target/${{ matrix.target }}/
+            7z a "lovely-${{ matrix.target }}.zip" release
+            mv "lovely-${{ matrix.target }}.zip" ${{ github.workspace }}
         
-              - name: Submit build artifact
-                env:
-                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-                run: >-
-                  gh release upload ${{ github.ref_name }} lovely-${{ matrix.target }}.zip
+      - name: Submit build artifact
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: >-
+          gh release upload ${{ github.ref_name }} lovely-${{ matrix.target }}.zip
